--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
     "@fontsource/sacramento": "^5.2.6",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.9.0",
+    "apexcharts": "^5.3.6",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.8.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.26.3",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
